samples/_failures_safe/1761405421_273a02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38639513.c: In function ‘main’:
./samples/SAFE/__tmp_38639513.c:168:13: error: expected expression at end of input
  168 |             strncpy(evt.data, input,
      |             ^~~~~~~
./samples/SAFE/__tmp_38639513.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38639513.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38639513.c:168:13: error: expected declaration or statement at end of input
